[package]
name = "todotracker"
description = "A simple cli application to manage your TODOs"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[profile.release]
opt-level = 3